cut duplicate code